--- a/main.css
+++ b/main.css
@@ -587,9 +587,8 @@ MEDIA QUERY
     border-top: 3px solid #9b2557;  
   }
 
-  .nav-link.w-inline-block.w--current:before {
+  .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 3px #9b2557;
-
   }
 
 }
@@ -617,7 +616,7 @@ MEDIA QUERY
       border-top: 3px solid #9b2557;  
     }
 
-    .nav-link.w-inline-block.w--current:before {
+    .nav-link.w-inline-block.w--current:before, .underline::before {
       border-bottom: solid 3px #9b2557;
     }
   /*html {
@@ -651,9 +650,8 @@ MEDIA QUERY
     border-top: 4px solid #9b2557;  
   }
 
-  .nav-link.w-inline-block.w--current:before {
+  .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 4px #9b2557;
-  
   }
 }
   @media (min-width: 2000px) and (max-width:2399px) {
@@ -681,9 +679,8 @@ MEDIA QUERY
   .claniceminigrid, .newsminigrid {
     border-top: 5px solid #9b2557;  
   }
-  .nav-link.w-inline-block.w--current:before {
+  .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 5px #9b2557;
-  
   }
   }
 
@@ -715,7 +712,7 @@ MEDIA QUERY
   .claniceminigrid, .newsminigrid {
     border-top: 5px solid #9b2557;  
   }
-  .nav-link.w-inline-block.w--current:before {
+  .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 5px #9b2557;
   }
 
