--- a/main.css
+++ b/main.css
@@ -520,7 +520,9 @@ MEDIA QUERY
   .nav-link.w-inline-block.w--current:before {
   border-bottom: solid 2px #9b2557;
   }
-
+  .swiper-pagination-bullet {
+  height: 2px;
+  }
    
 }
 
@@ -557,6 +559,9 @@ MEDIA QUERY
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 2px #9b2557;
   }
+  .swiper-pagination-bullet {
+    height: 2px;
+  }
    
 
 
@@ -586,9 +591,11 @@ MEDIA QUERY
   .claniceminigrid, .newsminigrid {
     border-top: 3px solid #9b2557;  
   }
-
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 3px #9b2557;
+  }
+  .swiper-pagination-bullet {
+    height: 3px;
   }
 
 }
@@ -618,6 +625,9 @@ MEDIA QUERY
 
     .nav-link.w-inline-block.w--current:before, .underline::before {
       border-bottom: solid 3px #9b2557;
+    }
+    .swiper-pagination-bullet {
+      height: 3px;
     }
   /*html {
   font-size:16px
@@ -653,6 +663,9 @@ MEDIA QUERY
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 4px #9b2557;
   }
+  .swiper-pagination-bullet {
+    height: 4px;
+  }
 }
   @media (min-width: 2000px) and (max-width:2399px) {
   /*html {
@@ -681,6 +694,9 @@ MEDIA QUERY
   }
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 5px #9b2557;
+  }
+  .swiper-pagination-bullet {
+    height: 5px;
   }
   }
 
@@ -715,7 +731,9 @@ MEDIA QUERY
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 5px #9b2557;
   }
-
+  .swiper-pagination-bullet {
+    height: 5px;
+  }
 
   }
 /*
