--- a/main.css
+++ b/main.css
@@ -158,6 +158,14 @@ CURRENT
    
 }
 
+.sub-link.w-inline-block.w--current:before {
+  content: "";
+border-bottom: solid 3px #259b95;
+position: absolute;
+left: -1.25em;
+width: 1em;
+ 
+}
 
 /*
 ================================================================================
