--- a/main.css
+++ b/main.css
@@ -157,15 +157,15 @@ CURRENT
   width: 1em;
    
 }
-
+/*
 .sub-link.w-inline-block.w--current:before {
   content: "";
 border-bottom: solid 3px #9b2557;
 position: absolute;
 left: -1.25em;
 width: 1em;
- 
-}
+ }
+*/
 .sub-link.w-inline-block.w--current  {
 margin-left: 1.25em;
 
