--- a/main.css
+++ b/main.css
@@ -262,7 +262,7 @@ NTH CHILDS
 }
 
 .unuk{
-  border-bottom: 0px solid #9b2557;
+  border-bottom: 0px solid #9b2557!important;
 }
 
 .child:nth-child(1) .grandchild {
