--- a/main.css
+++ b/main.css
@@ -281,6 +281,16 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;  
 }
 
+
+.child2:nth-child(1) .grandchild {
+  border-top: 3px solid #06dd3c;
+}
+
+.child2:nth-last-child(1) .grandchild {
+  border-bottom: 3px solid #9b2557;
+}
+
+
 /*
 .child:nth-child(1) .grandchild.projekti {
   border-top: 3px solid #9b2557;
