--- a/main.css
+++ b/main.css
@@ -264,7 +264,7 @@ NTH CHILDS
 .unuk{
   border-bottom: 0px solid #9b2557!important;
 }
-
+/*
 .child:nth-child(1) .grandchild {
   border-top: 3px solid #9b2557;
 }
@@ -272,7 +272,7 @@ NTH CHILDS
 .child:nth-last-child(1) .grandchild {
   border-bottom: 3px solid #9b2557;
 }
-
+*/
 .newswrap:nth-last-child(-n+3) {
   border-bottom: 3px solid #9b2557;
 }
