--- a/main.css
+++ b/main.css
@@ -258,12 +258,10 @@ NTH CHILDS
 
 
 .grandchild{
-  border-bottom: 1px solid #9b2557;
+  border-bottom: 1px solid #0cf433;
 }
 
-.unuk{
-  border-bottom: 0px solid #9b2557!important;
-}
+
 /*
 .child:nth-child(1) .grandchild {
   border-top: 3px solid #9b2557;
@@ -273,6 +271,8 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;
 }
 */
+
+/*
 .newswrap:nth-last-child(-n+3) {
   border-bottom: 3px solid #9b2557;
 }
@@ -280,8 +280,8 @@ NTH CHILDS
 .claniceminigrid:nth-last-child(-n+3) {
   border-bottom: 3px solid #9b2557;  
 }
-
-
+*/
+/*
 .child2:nth-child(1) .grandchild {
   border-top: 3px solid #06dd3c;
 }
