--- a/main.css
+++ b/main.css
@@ -264,6 +264,11 @@ NTH CHILDS
 .child2:nth-child(1) .grandchild {
   border-top: 3px solid #9b2557;
 }
+
+.newname{
+  border-bottom: 1px solid #370cf4;
+}
+
 /*
 ODAVDE DOLE JE ORIGINAL
 .child:nth-child(1) .grandchild {
