--- a/main.css
+++ b/main.css
@@ -269,6 +269,9 @@ NTH CHILDS
   border-bottom: 1px solid #370cf4;
 }
 
+.child2:nth-child(1) .newname {
+  border-top: 3px solid #9b2557;
+}
 /*
 ODAVDE DOLE JE ORIGINAL
 .child:nth-child(1) .grandchild {
