--- a/main.css
+++ b/main.css
@@ -690,12 +690,13 @@ MEDIA QUERY
     .swiper-pagination-bullet {
       height: 3px;
     }
+    /*
     .child2:nth-child(1) .newname {
       border-top: 3px solid #9b2557;
     }
     .child2:nth-last-child(1) .newname {
       border-bottom: 3px solid #9b2557;
-    }
+    }*/
   /*html {
   font-size:16px
   }*/
