--- a/main.css
+++ b/main.css
@@ -272,7 +272,7 @@ NTH CHILDS
 .child2:nth-child(1) .newname {
   border-top: 3px solid #9b2557;
 }
-.child2:nth-last-child(1) .grandchild {
+.child2:nth-last-child(1) .newname {
   border-bottom: 3px solid #9b2557;
 }
 
