--- a/main.css
+++ b/main.css
@@ -256,10 +256,10 @@ NTH CHILDS
 ================================================================================
 */
 
-
+/*
 .grandchild{
   border-bottom: 1px solid #9b2557;
-}
+}*/
 /*
 .child2:nth-child(1) .grandchild {
   border-top: 3px solid #9b2557;
