--- a/main.css
+++ b/main.css
@@ -533,11 +533,9 @@ OHOHO
 MEDIA QUERY
 ================================================================================
 */
-
+/*
 @media (max-width: 699px) {
-  /*html {
-  font-size:12px
-  }*/
+
   .contactwrap, .footersponzorwrap  {
     border-top: 2px solid #9b2557;
 }
@@ -577,9 +575,7 @@ MEDIA QUERY
 
  
   @media (min-width: 700px) and (max-width:999px) {
- /* html {
-  font-size:13px
-  }*/
+
 
   .contactwrap, .footersponzorwrap {
     border-top: 2px solid #9b2557;
@@ -622,9 +618,7 @@ MEDIA QUERY
 
 }
   @media (min-width: 1000px) and (max-width:1199px) {
-  /*html {
-  font-size:14px
-  }*/
+
   .contactwrap, .footersponzorwrap  {
     border-top: 3px solid #9b2557;
 }
@@ -696,15 +690,13 @@ MEDIA QUERY
     }
     .child2:nth-last-child(1) .newname {
       border-bottom: 3px solid #9b2557;
-    }*/
-  /*html {
-  font-size:16px
+    }
+
   }*/
-  }
+
+  /*
   @media (min-width: 1600px) and (max-width:1999px) {
-  /*html {
-  font-size:18px
-  }*/
+
   .contactwrap, .footersponzorwrap  {
     border-top: 4px solid #9b2557;
 }
@@ -743,9 +735,7 @@ MEDIA QUERY
 
 }
   @media (min-width: 2000px) and (max-width:2399px) {
-  /*html {
-  font-size:21px
-  }*/
+
   .contactwrap, .footersponzorwrap {
     border-top: 5px solid #9b2557;
 }
@@ -783,9 +773,7 @@ MEDIA QUERY
   }
 
   @media (min-width: 2400px) {
-  /*html {
-  font-size:24px
-  }*/
+  
   
   .contactwrap, .footersponzorwrap {
     border-top: 5px solid #9b2557;
