--- a/main.css
+++ b/main.css
@@ -268,14 +268,14 @@ NTH CHILDS
 .newname{
   border-bottom: 1px solid #9b2557;
 }
-/*
-.child2:nth-child(1) .newname {
+
+.child:nth-child(1) .newname {
   border-top: 3px solid #9b2557;
 }
-.child2:nth-last-child(1) .newname {
+.child:nth-last-child(1) .newname {
   border-bottom: 3px solid #9b2557;
 }
-*/
+
 /*
 ODAVDE DOLE JE ORIGINAL
 .child:nth-child(1) .grandchild {
