--- a/main.css
+++ b/main.css
@@ -276,6 +276,10 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;
 }
 
+.child2:nth-child(1) .newname {
+  border-top: 3px solid #9b2557;
+}
+
 /*
 ODAVDE DOLE JE ORIGINAL
 .child:nth-child(1) .grandchild {
