--- a/main.css
+++ b/main.css
@@ -276,11 +276,11 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;
 }
 */
-.child2:nth-child(1) .newname {
+.parent:nth-child(1) .newname {
   border-top: 3px solid #9b2557;
 }
 
-.child2:nth-last-child(1) .newname {
+.parent:nth-last-child(1) .newname {
   border-bottom: 3px solid #9b2557;
 }
 
