--- a/main.css
+++ b/main.css
@@ -279,11 +279,11 @@ NTH CHILDS
 .parent:nth-child(1) .newname {
   border-top: 3px solid #9b2557;
 }
-
+/*
 .parent:nth-last-child(1) .newname {
   border-bottom: 3px solid #9b2557;
 }
-
+*/
 /*
 ODAVDE DOLE JE ORIGINAL
 .child:nth-child(1) .grandchild {
