--- a/main.css
+++ b/main.css
@@ -269,13 +269,13 @@ NTH CHILDS
   border-bottom: 1px solid #9b2557;
 }
 
-/*.child:nth-child(1) .newname {
+.child:nth-child(1) .newname {
   border-top: 3px solid #9b2557;
 }
 .child:nth-last-child(1) .newname {
   border-bottom: 3px solid #9b2557;
 }
-*/
+
 .parents:nth-child(1) .newname {
   border-top: 3px solid #9b2557;
 }
