--- a/main.css
+++ b/main.css
@@ -275,7 +275,7 @@ NTH CHILDS
 .child:nth-last-child(1) .newname {
   border-bottom: 3px solid #9b2557;
 }
-
+/*
 .parent:nth-child(1) .newname {
   border-top: 3px solid #9b2557;
 }
