--- a/main.css
+++ b/main.css
@@ -276,8 +276,8 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;
 }
 
-li:nth-child(1) .grchildold {
-  border-top: 3px solid #9b2557;
+.newname:nth-child(1){
+  border-top: 3px solid #10ebce;
 }
 /*
 .parent:nth-last-child(1) .newname {
