--- a/main.css
+++ b/main.css
@@ -276,7 +276,7 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;
 }
 
-.child2:nth-child(1) .link {
+.link:nth-child(1) {
   border-top: 3px solid #259b2f;
 }
 
