--- a/main.css
+++ b/main.css
@@ -275,8 +275,11 @@ NTH CHILDS
 .child:nth-last-child(1) .newname {
   border-bottom: 3px solid #9b2557;
 }
-
+/*
 .link  {
+  border-top: 3px solid #259b2f;
+}*/
+.newname:nth-child(-n+3)  {
   border-top: 3px solid #259b2f;
 }
 
