--- a/main.css
+++ b/main.css
@@ -276,7 +276,7 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;
 }
 
-.child:nth-child(1) .grandgrandchild {
+.child2:nth-child(1) .grandgrandchild {
   border-top: 3px solid #259b2f;
 }
 /*
