--- a/main.css
+++ b/main.css
@@ -285,7 +285,7 @@ NTH CHILDS
   border-bottom: 1px solid #9b2557;
 }
 
-.child:nth-child(1) .newname {
+.parent:nth-child(1) .newname {
   border-top: 3px solid #1676dd;
 }
 /*
