--- a/main.css
+++ b/main.css
@@ -298,7 +298,7 @@ NTH CHILDS
   border-top: 3px solid #1676dd;
 }
 */
-
+/*
 .child:nth-last-child(1) .newname {
   border-bottom: 3px solid #9b2557;
 }*/
