--- a/main.css
+++ b/main.css
@@ -82,7 +82,7 @@ ANIMATE ON RESIZE
 ================================================================================
 */
   
-  section, h1, h2, h3, p, li, img {
+  section, h1, h2, h3, p, li {
     -moz-transition: width 1s ease-in-out, left 1.5s ease-in-out;
     -webkit-transition: width 1s ease-in-out, left 1.5s ease-in-out;
     -moz-transition: width 1s ease-in-out, left 1.5s ease-in-out;
