--- a/main.css
+++ b/main.css
@@ -247,7 +247,7 @@ IMAGE BLEND MODE
   }
 
 .card__image--transition {
-  transition: 0.3s ease all;
+  transition: 0.3s ease width 2s height 4s;
   transition-delay: 0.5s;
   mix-blend-mode: normal;
   /*background-color: #000000;*/
