--- a/main.css
+++ b/main.css
@@ -53,6 +53,17 @@ body {
 
 /*
 ================================================================================
+100 vh fix SAFARI?
+================================================================================
+*/
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
+
+/*
+================================================================================
 NO SELECTION
 ================================================================================
 */
