--- a/main.css
+++ b/main.css
@@ -13,13 +13,28 @@ html {
 }
 
 */
+
+/*
+================================================================================
+100 vh fix SAFARI?
+================================================================================
+*/
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
+html {
+  height: -webkit-fill-available;
+}
+
+
+
 /*
 ================================================================================
 SCROLLBAR STYLE
 ================================================================================
 */
-  
-
 /*width*/
 
 body::-webkit-scrollbar {
@@ -51,15 +66,7 @@ body {
 
 */
 
-/*
-================================================================================
-100 vh fix SAFARI?
-================================================================================
-*/
-body {
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
-}
+
 
 
 /*
