--- a/main.css
+++ b/main.css
@@ -431,12 +431,12 @@ transform-origin: top left;
 SWIPER FIX
 ================================================================================
 */
-
+/*
 .swiper-pagination {
 
     z-index: 1 !important;
 }
-
+*/
 /*
 ================================================================================
 SEARCH
