--- a/main.css
+++ b/main.css
@@ -508,7 +508,7 @@ OHOHO
 MEDIA QUERY
 ================================================================================
 */
-
+/*
 @media (max-width: 699px) {
 
   .contactwrap, .footersponzorwrap  {
@@ -529,11 +529,18 @@ MEDIA QUERY
   .claniceminigrid:nth-last-child(-n+3) {
     border-bottom: 2px solid #9b2557;  
   }
+
+
   /*
   .claniceminigrid, .newsminigrid {
     border-top: 2px solid #9b2557;  
   }
   */
+
+/*
+
+
+
   .nav-link.w-inline-block.w--current:before {
   border-bottom: solid 2px #9b2557;
   }
@@ -582,10 +589,15 @@ MEDIA QUERY
   .claniceminigrid:nth-last-child(-n+3) {
     border-bottom: 2px solid #9b2557;  
   }
+
 /*
   .claniceminigrid, .newsminigrid {
     border-top: 2px solid #9b2557;  
   }*/
+
+
+
+  /*
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 2px #9b2557;
   }
@@ -626,11 +638,17 @@ MEDIA QUERY
   .claniceminigrid:nth-last-child(-n+3) {
     border-bottom: 3px solid #9b2557;  
   }
+
+
+
   /*
   .claniceminigrid, .newsminigrid {
     border-top: 3px solid #9b2557;  
   }
   */
+
+
+  /*
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 3px #9b2557;
   }
@@ -667,17 +685,28 @@ MEDIA QUERY
     .claniceminigrid:nth-last-child(-n+3) {
       border-bottom: 3px solid #9b2557;  
     }
+
+
+
+
     /*
     .claniceminigrid, .newsminigrid {
       border-top: 3px solid #9b2557;  
     }
 */
+
+
+/*
     .nav-link.w-inline-block.w--current:before, .underline::before {
       border-bottom: solid 3px #9b2557;
     }
     .swiper-pagination-bullet {
       height: 3px;
     }
+
+
+
+    /* OVO JR UGAŠENO */
     /*
     .child2:nth-child(1) .newname {
       border-top: 3px solid #9b2557;
@@ -686,6 +715,7 @@ MEDIA QUERY
       border-bottom: 3px solid #9b2557;
     }
 */
+/*
   }
 
  
@@ -709,11 +739,19 @@ MEDIA QUERY
   .claniceminigrid:nth-last-child(-n+3) {
     border-bottom: 4px solid #9b2557;  
   }
+
+
+
+
 /*
   .claniceminigrid, .newsminigrid {
     border-top: 4px solid #9b2557;  
   }
 */
+
+/*
+
+
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 4px #9b2557;
   }
@@ -748,11 +786,16 @@ MEDIA QUERY
   .claniceminigrid:nth-last-child(-n+3) {
     border-bottom: 5px solid #9b2557;  
   }
+
+
   /*
   .claniceminigrid, .newsminigrid {
     border-top: 5px solid #9b2557;  
   }
   */
+
+
+  /*
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 5px #9b2557;
   }
@@ -791,11 +834,17 @@ MEDIA QUERY
   .claniceminigrid:nth-last-child(-n+3) {
     border-bottom: 5px solid #9b2557;  
   }
+
+
+
   /*
   .claniceminigrid, .newsminigrid {
     border-top: 5px solid #9b2557;  
   }
   */
+
+
+  /*
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 5px #9b2557;
   }
