--- a/main.css
+++ b/main.css
@@ -508,9 +508,22 @@ OHOHO
 MEDIA QUERY
 ================================================================================
 */
-/*
+
 @media (max-width: 699px) {
 
+
+  .verticalx{
+    width: calc(7em*21/29.7);
+   /* height: 18em; */
+  }
+  
+  .horizontalx{
+    width: calc(5em*29.7/21);
+   /* height: 18vh;*/
+  }
+
+
+  /*
   .contactwrap, .footersponzorwrap  {
     border-top: 2px solid #9b2557;
 }
@@ -529,7 +542,7 @@ MEDIA QUERY
   .claniceminigrid:nth-last-child(-n+3) {
     border-bottom: 2px solid #9b2557;  
   }
-
+*/
 
   /*
   .claniceminigrid, .newsminigrid {
@@ -537,7 +550,7 @@ MEDIA QUERY
   }
   */
 
-/*
+
 
 
 
@@ -597,7 +610,7 @@ MEDIA QUERY
 
 
 
-  /*
+
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 2px #9b2557;
   }
@@ -648,7 +661,7 @@ MEDIA QUERY
   */
 
 
-  /*
+
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 3px #9b2557;
   }
@@ -696,7 +709,7 @@ MEDIA QUERY
 */
 
 
-/*
+
     .nav-link.w-inline-block.w--current:before, .underline::before {
       border-bottom: solid 3px #9b2557;
     }
@@ -715,7 +728,7 @@ MEDIA QUERY
       border-bottom: 3px solid #9b2557;
     }
 */
-/*
+
   }
 
  
@@ -749,7 +762,7 @@ MEDIA QUERY
   }
 */
 
-/*
+
 
 
   .nav-link.w-inline-block.w--current:before, .underline::before {
@@ -795,7 +808,7 @@ MEDIA QUERY
   */
 
 
-  /*
+  
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 5px #9b2557;
   }
@@ -844,7 +857,7 @@ MEDIA QUERY
   */
 
 
-  /*
+  
   .nav-link.w-inline-block.w--current:before, .underline::before {
     border-bottom: solid 5px #9b2557;
   }
@@ -858,6 +871,7 @@ MEDIA QUERY
     border-bottom: 5px solid #9b2557;
   }
   }
+
 /*
 ================================================================================
 TEXT SINGLE PAGE
