--- a/main.css
+++ b/main.css
@@ -596,6 +596,23 @@ MEDIA QUERY
  
 @media (min-width: 700px) and (max-width:999px) {
 
+  /* RICH TXT FOTKA POZICIJA*/
+  .w-richtext figure.w-richtext-align-floatleft {
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+    clear: both;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+
+
+
+
+
+
 /*
   .contactwrap, .footersponzorwrap {
     border-top: 2px solid #9b2557;
