--- a/main.css
+++ b/main.css
@@ -408,7 +408,7 @@ transform-origin: top left;
 
 
 .swiper-container .swiper-wrapper .swiper-slide-active .up:nth-child(2) {
-  animation-delay: 0.5s;
+  animation-delay: 0.4s;
 }
 .swiper-container .swiper-wrapper .swiper-slide-active .up__link:nth-child(1) {
   animation-delay: 0.2s;
@@ -500,6 +500,16 @@ OHOHO
     display: block;
   } 
 
+
+/*
+================================================================================
+RICH IMAGE FIX
+================================================================================
+*/
+
+  .w-richtext figure.w-richtext-align-floatleft {
+    max-width: 35em;
+}
 
 
 
@@ -609,17 +619,17 @@ MEDIA QUERY
 
 
 
-/*.w-richtext figure.w-richtext-figure-type-image>figcaption, .w-richtext figure[data-rt-type="image"]>figcaption {
+.w-richtext figure.w-richtext-figure-type-image>figcaption, .w-richtext figure[data-rt-type="image"]>figcaption {
   display: table-caption;
   caption-side: bottom;
-} */
-/*figcaption {
+}
+figcaption {
   margin-top: 0.5em;
   font-size: 1.125em;
   text-align: left;
-} */
+}
 figcaption {
- /* margin-top: 5px;*/
+  margin-top: 5px;
   text-align: center;
 }
 
@@ -631,6 +641,11 @@ figcaption {
 
 
 
+figcaption {
+  margin-top: 0.5em;
+  font-size: 1.125em;
+  text-align: left;
+}
 
 
 
