--- a/main.css
+++ b/main.css
@@ -608,6 +608,15 @@ MEDIA QUERY
 
   /* RICH TXT FOTKA POZICIJA*/
 
+  .w-richtext figure.w-richtext-align-floatleft {
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+    clear: both;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
 
 
 
