--- a/main.css
+++ b/main.css
@@ -538,6 +538,21 @@ MEDIA QUERY
   }
 
 
+/*RICH TEXT FOTKA*/
+
+  .w-richtext figure.w-richtext-align-floatleft {
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+    clear: both;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+
+
+
 
   /*
   .contactwrap, .footersponzorwrap  {
