--- a/main.css
+++ b/main.css
@@ -551,6 +551,13 @@ MEDIA QUERY
 }
 
 
+.w-richtext figure.w-richtext-align-floatleft:nth-child(1) {
+    text-align: left;
+    border-top: 2px solid #9b2557;
+}
+
+
+
 
 
 
