--- a/main.css
+++ b/main.css
@@ -538,8 +538,7 @@ MEDIA QUERY
   }
 
 
-/*RICH TEXT FOTKA*/
-
+/* RICH TEXT FOTKA CENTAR*/
   .w-richtext figure.w-richtext-align-floatleft {
     width: 100%;
     max-width: 100%;
@@ -550,11 +549,11 @@ MEDIA QUERY
     margin-left: auto;
 }
 
-
+/* RICH TEXT PRVA FOTKA */
 .w-richtext figure.w-richtext-align-floatleft:nth-child(1) {
-      margin-top: 0em;
+      margin-top: 7.1em;
 }
-}
+
 
 
 
@@ -628,18 +627,21 @@ MEDIA QUERY
  
 @media (min-width: 700px) and (max-width:999px) {
 
-  /* RICH TXT FOTKA POZICIJA*/
-
-  .w-richtext figure.w-richtext-align-floatleft {
-    width: 100%;
-    max-width: 100%;
-    text-align: center;
-    clear: both;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
+/* RICH TEXT FOTKA CENTAR*/
+.w-richtext figure.w-richtext-align-floatleft {
+  width: 100%;
+  max-width: 100%;
+  text-align: center;
+  clear: both;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 
+/* RICH TEXT PRVA FOTKA */
+.w-richtext figure.w-richtext-align-floatleft:nth-child(1) {
+    margin-top: 7.1em;
+}
 
 
 
@@ -698,6 +700,24 @@ MEDIA QUERY
 
 }
   @media (min-width: 1000px) and (max-width:1199px) {
+
+
+    /* RICH TEXT FOTKA CENTAR*/
+  .w-richtext figure.w-richtext-align-floatleft {
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+    clear: both;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+/* RICH TEXT PRVA FOTKA */
+.w-richtext figure.w-richtext-align-floatleft:nth-child(1) {
+      margin-top: 7.1em;
+}
+
 
     /*
   .contactwrap, .footersponzorwrap  {
