--- a/main.css
+++ b/main.css
@@ -476,6 +476,31 @@ KILL WEBFLOW BADGE
 ROTATE OVERTEXT
 ================================================================================
 */
+.is--rotate {
+  -webkit-transform-style: preserve-3d;
+ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3); 
+
+  -webkit-transform: translateY(-90deg);
+  -webkit-transform: rotate(-90deg);
+  -webkit-transform-origin:left bottom;
+
+
+  -moz-transform: translateY(-90deg);
+  -moz-transform-origin: left bottom; 
+
+  -ms-transform: translateY(-90deg);
+ -ms-transform-origin:left bottom; 
+
+  -o-transform: translateY(-90deg);
+
+  transform: translateY(-90deg);
+  transform: rotate(-90deg);
+
+
+  transform-origin: left bottom;
+
+}
+
 
 
 /*
